fixed stretching issue

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -147,23 +147,14 @@ ul {
     background-image: url("/assets/images/hero-bg-img.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    max-width: 1920px;
-    margin-inline: auto;
 }
 
 .hero-container {
     height: calc(1080px - 156px);
-    max-width: 1920px;
-    margin-inline: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-}
-
-.hero-section {
-    max-width: 1920px;
-    margin-inline: auto;
 }
 
 .bear-box {
@@ -406,8 +397,6 @@ hr {
 .zig-zag {
     background-image: url("../images/zig-zag-white.png");
     background-repeat: no-repeat;
-    background-size: 100%;
-    height: 145px;
-    max-width: 1920px;
-    margin-inline: auto;
+    background-size: 100% 100%;
+    height: 150px;
 }
